<resources>
    <string name="app_name">PartyThings</string>

    <string name="hello_world">This is a rockstar test!</string>
    <string name="click_me">Click Me</string>
    <string name="action_settings">Settings</string>
    <string name="media_route_menu_title">Cast It</string>
    <string name="hello_world2">!test rockstar a is This</string>
    <string name="not_connected">You are not connected to a chromecast.  Please connect to proceed.</string>
    <string name="create_game">Create Game.</string>
    <string name="create_game_name">Enter game name:</string>
    <string name="create_player_name">Enter your desired player name:</string>
    <string name="submit">JoinGame</string>
    <string name="join">Join</string>
    <string name="ready_prompt">When all players have joined click Ready</string>
    <string name="ready">Ready!</string>
    <string name="vote_for_prompt">Vote for the next Party Thing:</string>
    <string name="placeholder">placeholder</string>
    <string name="waiting_for_others">Waiting for other players...</string>
    <string name="choose_response">Choose a response to try and match:</string>
    <string name="choose_player">Who do you think said:</string>
    <string name="you_said_that_player">You said that</string>
    <string name="said">said</string>
    <string name="youwere">you were</string>
    <string name="youscored">you scored</string>
    <string name="you_scored">You scored</string>
    <string name="points">points</string>
    <string name="enter_response">Enter response to the prompt:</string>
</resources>
