<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:anrdoid="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/notConnectedPane"
        android:visibility="gone"
        android:orientation="vertical">
        <TextView android:text="@string/not_connected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/notConnectedText" />
        <Button
            android:layout_width="126dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/connectedButton"
            android:text="Connect"
            android:layout_marginTop="12dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/enterGamePane"
        android:visibility="gone"
        android:orientation="vertical">
        <TextView android:text="@string/create_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/createGameText"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gameNamePane"
            android:visibility="gone"
            android:orientation="vertical">
            <TextView android:text="@string/create_game_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/createGameText"
                android:layout_marginTop="24dp"
                android:id="@+id/enterGameNameText"
                android:layout_gravity="center_horizontal"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="Name"
                android:ems="10"
                android:id="@+id/editText"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <TextView android:text="@string/create_player_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_below="@+id/createGameText"
            android:id="@+id/enterPlayerNameText"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/editText2"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="126dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/createGameButton"
            android:text="Join"
            android:layout_marginTop="12dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/readyPane"
        android:visibility="gone"
        android:orientation="vertical">
        <TextView android:text="@string/ready_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/readyPromptText"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:layout_width="126dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/ready"
            android:text="@string/ready"
            android:layout_marginTop="12dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/promptSelectionPane"
        android:visibility="gone"
        android:orientation="vertical">
        <TextView android:text="@string/vote_for_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/voteForPrompt"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/placeholder"
            android:id="@+id/prompt_button_1"
            android:layout_marginTop="12dp"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/placeholder"
            android:id="@+id/prompt_button_2"
            android:layout_marginTop="12dp"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:text="placeholder"
            android:id="@+id/prompt_button_3"
            android:layout_marginTop="12dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/waitingPane"
        android:visibility="gone"
        android:orientation="vertical">
        <TextView android:text="@string/waiting_for_others"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/waitingText"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/enterResponsePane"
        android:visibility="gone"
        android:orientation="vertical">
        <TextView android:text="@string/enter_response"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/enterResponseText"
            android:layout_gravity="center_horizontal"/>
        <TextView android:text="placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/enterResponsePromptText"
            android:layout_gravity="center_horizontal"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="56dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:id="@+id/enterResponseEdit"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:text="Join Game"
            android:id="@+id/response_button"
            android:layout_marginTop="12dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pickResponsePane"
        android:visibility="gone"
        android:orientation="vertical">
        <TextView android:text="@string/choose_response"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pickResponseText"
            android:layout_gravity="center_horizontal"/>
        <ListView
            android:id="@+id/pickResponseList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pickPlayerPane"
        android:visibility="gone"
        android:orientation="vertical">
        <TextView android:text="@string/choose_player" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pickPlayerText"
            android:layout_gravity="center_horizontal"/>
        <TextView android:text="@string/placeholder" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pickPlayerChosenResponseText"
            android:layout_gravity="center_horizontal"/>
        <ListView
            android:id="@+id/pickPlayerList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/resultsPane"
        android:visibility="visible"
        android:orientation="vertical">
        <TextView android:text="@string/you_said_that_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chosenPlayerIntroText"
            android:layout_gravity="center_horizontal"/>
        <TextView android:text="@string/placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chosenPlayerText"
            android:layout_gravity="center_horizontal"/>
        <TextView android:text="@string/said"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chosenResponseIntroText"
            android:layout_gravity="center_horizontal"/>
        <TextView android:text="@string/placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chosenResponseText"
            android:layout_gravity="center_horizontal"/>
        <TextView android:text="@string/youwere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/successRateIntroText"
            android:layout_gravity="center_horizontal"/>
        <TextView android:text="@string/placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/successText"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
                <TextView android:text="@string/you_scored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/scoreIntroText"
                    android:layout_gravity="center_horizontal"/>
                <TextView android:text="@string/placeholder" android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pointsText"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:layout_gravity="center_horizontal"/>
                <TextView android:text="@string/points" android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pointsOutroText"
                    android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </LinearLayout>
    <!--<Button-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/click_me"-->
        <!--android:id="@+id/click_me_button"-->
        <!--android:layout_marginTop="12dp"-->
        <!--android:layout_below="@+id/text1Layout"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:clickable="true" />-->

</RelativeLayout>
